--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">QuizGame</string>
+    <string name="app_name" translatable="false">QuizGame</string>
+    <string name="check" translatable="false">check</string>
+    <string name="next" translatable="false">next</string>
 </resources>
