--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="check" translatable="false">check</string>
     <string name="next" translatable="false">next</string>
     <string name="new_game">Start a new game</string>
+    <string name="stats">Game Over\n\nCorrects: %d\nIncorrects: %d</string>
 </resources>
